[package]
name = "rustls-pki-types"
version = "1.12.0"
edition = "2021"
rust-version = "1.60"
license = "MIT OR Apache-2.0"
description = "Shared types for the rustls PKI ecosystem"
documentation = "https://docs.rs/rustls-pki-types"
homepage = "https://github.com/rustls/pki-types"
repository = "https://github.com/rustls/pki-types"
categories = ["network-programming", "data-structures", "cryptography"]

[features]
default = ["alloc"]
alloc = ["dep:zeroize"]
std = ["alloc"]
web = ["web-time"]
trace_drop_and_zeroize = ["std", "alloc"]
#XXX: using 'my_fork' feature in dependents(those that depend on this crate) allows for toggling the trace from here while also ensuring the dependents don't accidentally use an upstream non-forked version of this crate.
my_fork=["trace_drop_and_zeroize"]
#my_fork=[]

[dependencies]
zeroize = { version = "1", optional = true }

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dev-dependencies]
crabgrind = "=0.1.9" # compatible with valgrind package on GHA ubuntu-latest

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
web-time = { version = "1", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo_check_external_types]
allowed_external_types = ["zeroize::Zeroize"]
